--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -1,9 +1,29 @@
 {% extends "basic.html" %}
 
-{%block title%}
+{% block title %}
 Doctor
-{%endblock%}
+{% endblock %}
 
-{%block content%}
-HOMEeeeee PAGE
- {%endblock%}
+{% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/common.css' %}">
+<h1>Our Doctors</h1>
+<hr>
+
+<div class="container">
+    <div class="row justify-content-center">
+        {% for d in doctors %}
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="card shadow-sm">
+                <img src="{{ d.doc_image.url }}" class="card-img-top" alt="DocImg" width=200 height=200>
+                <div class="card-body">
+                    <h5 class="card-title text-center">Dr. {{ d.doc_name }}</h5>
+                    <p class="card-text">{{ d.doc_spec }}</p>
+                    <p class="card-text text-muted">{{ d.dep_name }} Department</p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
