--- a/static/css/common.css
+++ b/static/css/common.css
@@ -2,3 +2,26 @@
 h1 {
     text-align: center;
 }
+
+.about-section {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.info-box {
+    background-color: rgb(195, 231, 231);
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.info-box h2 {
+    color: #264557;
+}
+
+.info-box p {
+    color: brown;
+}
+
+
