--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,10 +29,13 @@ nav {
     display: flex;
     justify-content: center;
 }
-nav a {
+nav a,
+nav a:hover {
     color: #fff;
     text-decoration: none;
     margin: 0 20px;
     font-size: 18px;
 }
-
+nav a:hover{
+    color: #a6c3e3;
+}
