--- a/templates/department.html
+++ b/templates/department.html
@@ -12,7 +12,7 @@ Department
 
 {% for d in deptt %}
 
-<div>
+<div class="info-boxx">
     <h1>{{d.dep_name}}</h1>
     <p>{{d.dep_description}}</p>
 </div>
